<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFF"
    android:orientation="vertical"
    android:weightSum="2" >
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimary" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/Contact_us"
            android:textColor="#fff"
            android:textSize="@dimen/header_title_size" />

        <TextView
            android:id="@+id/TV_cancel"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:background="@drawable/dashboard_menu_d"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#fff" />

        <TextView
            android:id="@+id/TV_save"
            android:layout_width="@dimen/header_btn_save_size"
            android:layout_height="@dimen/header_btn_save_size"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:background="@drawable/contact_us_send"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#fff" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/contact_us_name" />
            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_toEndOf="@+id/imageView"
                android:gravity="center"
                android:text="@string/name"
                android:textColor="#f95801"
                android:textSize="16dp" />
        </RelativeLayout>

        <EditText
            android:id="@+id/ET_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/round_white_shape"
            android:ems="10"
            android:gravity="center"
            android:hint="John e.g"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:maxLines="1"
            android:paddingBottom="7dp"
            android:paddingTop="7dp"
            android:textColor="#b4bac8"
            android:textSize="14dp">
        </EditText>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center">

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/contact_us_email" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_toEndOf="@+id/imageView1"
                android:gravity="center"
                android:text="@string/email"
                android:textColor="#f95801"
                android:textSize="16dp" />
        </RelativeLayout>



        <EditText
            android:id="@+id/ET_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/round_white_shape"
            android:ems="10"
            android:gravity="center"
            android:hint="John@gmail.com e.g"
            android:inputType="textEmailAddress"
            android:paddingBottom="7dp"
            android:paddingTop="7dp"
            android:textColor="#b4bac8"
            android:textSize="14dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/contact_us_phone" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_toEndOf="@+id/imageView2"
                android:gravity="center"
                android:text="@string/contact_purpose"
                android:textColor="#f95801"
                android:textSize="16dp" />
        </RelativeLayout>

        <EditText
            android:id="@+id/ET_contactPurpose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/round_white_shape"
            android:ems="10"
            android:gravity="center"
            android:paddingBottom="7dp"
            android:paddingTop="7dp"
            android:textColor="#b4bac8"
            android:textSize="14dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/contact_us_subject" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_toEndOf="@+id/imageView3"
                android:gravity="center"
                android:text="@string/subject"
                android:textColor="#f95801"
                android:textSize="16dp" />
        </RelativeLayout>

        <EditText
            android:id="@+id/ET_subject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/round_white_shape"
            android:ems="10"
            android:gravity="center"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:maxLines="1"
            android:paddingBottom="7dp"
            android:paddingTop="7dp"
            android:textColor="#b4bac8"
            android:textSize="14dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/contact_us_description" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_toEndOf="@+id/imageView4"
                android:gravity="center"
                android:text="@string/description"
                android:textColor="#f95801"
                android:textSize="16dp" />
        </RelativeLayout>

        <EditText
            android:id="@+id/ET_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/round_white_shape"
            android:ems="10"
            android:gravity="center"
            android:minLines="3"
            android:paddingBottom="7dp"
            android:paddingTop="7dp"
            android:textColor="#b4bac8"
            android:textSize="14dp" />
    </LinearLayout>


</LinearLayout>
